[metadata]
name = solarmax_query
version = 2.1.0
author = '3tes, Dominik Wetzel'
author_email = 3tes@3tes.dev
description = A library for querying SolarMax inverters
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/3tes/solarmax_query
project_urls =
    Bug Tracker = https://github.com/3tes/solarmax_query/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    =.
packages = find:
python_requires = >=3.11

[options.packages.find]
where = .